# maskladevlu-gear-academy

./: .gitignore  Cargo.toml  LICENSE  README.md
auction/: Cargo.toml
auction/io/: Cargo.toml
auction/io/src/: lib.rs
auction/src/: lib.rs
escrow/: Cargo.toml  build.rs
escrow-factory/: Cargo.toml  build.rs
escrow-factory/io/: Cargo.toml
escrow-factory/io/src/: lib.rs
escrow-factory/src/: lib.rs
escrow-factory/tests/: escrow_factory_test.rs
escrow/io/: Cargo.toml
escrow/io/src/: lib.rs
escrow/src/: lib.rs
escrow/tests/: escrow_tests.rs
hello-world/: Cargo.toml
hello-world/io/: Cargo.toml
hello-world/io/src/: lib.rs
hello-world/src/: lib.rs
hello-world/tests/: hello_test.rs
state/: Cargo.toml  build.rs
state/src/: lib.rs
store/: Cargo.toml  build.rs
store/io/: Cargo.toml
store/io/src/: lib.rs
store/src/: lib.rs
tamagotchi/: Cargo.toml  build.rs
tamagotchi-factory/: Cargo.toml  build.rs
tamagotchi-factory/io/: Cargo.toml
tamagotchi-factory/io/src/: lib.rs
tamagotchi-factory/src/: lib.rs
tamagotchi-factory/tests/: factory_tests.rs
tamagotchi/io/: Cargo.toml
tamagotchi/io/src/: lib.rs
tamagotchi/src/: lib.rs
tamagotchi/tests/: tamagotchi_test.rs
