[workspace]
resolver = "2"
members = ["escrow", "escrow/io", "state"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Maskla"]

[workspace.dependencies]
# Smart contracts dependencies
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", features = [
    "wasm-opt",
], rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47"}
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
# IO dependencies
escrow-io = { path = "escrow/io" }