[workspace]
resolver = "2"
members = ["tamagotchi", "tamagotchi/io"]
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Maskla"]

[workspace.dependencies]
# Smart contracts dependencies
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", features = [
    "wasm-opt",
], rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
# IO dependencies
tamagotchi-io = { path = "tamagotchi/io" }
# store-io = { path = "store/io" }
ft-main-io = { git = "https://github.com/gear-foundation/dapps-sharded-fungible-token.git" }
store-io = { git = "https://github.com/gear-foundation/dapps-smart-contract-academy.git" }
