[package]
name = "hello-world"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
# hello-world-io.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
hello-world-io.workspace = true

[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
hello-world-io.workspace = true

[dev-dependencies]
gtest.workspace = true