[package]
name = "state"
edition.workspace = true
version.workspace = true
authors.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmeta = { workspace = true, features = ["codegen"]}
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
escrow-io.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm", "wasm-opt"] }