[package]
name = "store"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
store-io.workspace = true

[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
store-io.workspace = true

[dev-dependencies]
gtest.workspace = true