[package]
name = "tamagotchi"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
tamagotchi-io.workspace = true

[build-dependencies]
gmeta.workspace = true
gear-wasm-builder.workspace = true
tamagotchi-io.workspace = true

[dev-dependencies]
gtest.workspace = true