[package]
name = "store-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmeta.workspace = true
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
ft-main-io.workspace = true