[package]
name = "tamagotchi-factory-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmeta.workspace = true
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
tamagotchi-io.workspace = true
store-io.workspace = true